<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        style="b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_regular"
        android:text="@string/head_count"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/image_slider_view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/image_slider_view_pager"
        android:layout_width="340dp"
        android:layout_height="226dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/saira_regular"
        android:text="@string/attendance"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_button_launching_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_slider_view_pager"
        app:layout_constraintVertical_bias="0.042" />

    <ImageView
        android:id="@+id/custom_button_launching_fragment"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_marginBottom="68dp"
        android:src="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_regular"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/custom_button_launching_fragment"
        app:layout_constraintEnd_toEndOf="@+id/custom_button_launching_fragment"
        app:layout_constraintStart_toStartOf="@+id/custom_button_launching_fragment"
        app:layout_constraintTop_toTopOf="@+id/custom_button_launching_fragment" />


</androidx.constraintlayout.widget.ConstraintLayout>