<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/circle_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/circle_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20999998" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="294dp"
        android:layout_height="407dp"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="40dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/admin_key_edit_text"
                android:layout_width="251dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_edit_text"
                android:fontFamily="@font/saira_regular"
                android:hint="@string/admin_key"
                android:paddingLeft="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/admin_password_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.659"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/admin_password_edit_text"
                android:layout_width="251dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit_text"
                android:fontFamily="@font/saira_regular"
                android:hint="@string/admin_password"
                android:paddingLeft="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/proceed_button"
                app:layout_constraintEnd_toEndOf="@+id/admin_key_edit_text"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/admin_key_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/admin_key_edit_text" />

            <ImageView
                android:id="@+id/proceed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:src="@drawable/custom_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/admin_password_edit_text"
                app:layout_constraintStart_toStartOf="@+id/admin_password_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/admin_password_edit_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/saira_regular"
                android:text="@string/proceed"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/proceed_button"
                app:layout_constraintEnd_toEndOf="@+id/proceed_button"
                app:layout_constraintStart_toStartOf="@+id/proceed_button"
                app:layout_constraintTop_toTopOf="@+id/proceed_button" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/saira_regular"
                android:text="@string/details"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/admin_key_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.321" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_regular"
        android:text="@string/head_count"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45999998" />


</androidx.constraintlayout.widget.ConstraintLayout>